@@ -40,28 +40,33 @@ import java.util.Vector;
 
 
 /**
- * A class that represents a group of users. This group may be assigned privilegies to some entries or other resources at the same way as a user may is.
- * @author olov
+ * A class that represents a group of users.
+ * This group may be assigned privileges to some entries or other resources in the same way as a user may be.
  *
+ * @author olov
  */
 public class GroupImpl extends ListImpl implements Group {
-	
-	/** Logger */
+
+	/**
+	 * Logger
+	 */
 	static Logger log = LoggerFactory.getLogger(UserImpl.class);
 
 	private URI homeContext;
-	
+
 	/**
 	 * Creates a new group with the specified URI
+	 *
 	 * @param entry the entry for the new group
-	 * @param uri the URI for the new group
+	 * @param uri   the URI for the new group
 	 */
 	public GroupImpl(EntryImpl entry, IRI uri, SoftCache cache) {
 		super(entry, uri);
 	}
-	
+
 	/**
 	 * Returns the name of the user
+	 *
 	 * @return the name of the user
 	 */
 	public String getName() {
@@ -69,7 +74,8 @@ public class GroupImpl extends ListImpl implements Group {
 	}
 
 	/**
-	 * Tries to sets the users name.
+	 * Tries to set the user's name.
+	 *
 	 * @param newName the requested name
 	 * @return true if the name was approved, false otherwise
 	 */
@@ -79,22 +85,14 @@ public class GroupImpl extends ListImpl implements Group {
 
 	public Context getHomeContext() {
 		if (this.homeContext == null) {
-			RepositoryConnection rc = null;
-			try {
-				rc = this.entry.repository.getConnection();
-				List<Statement> matches = rc.getStatements(resourceURI, RepositoryProperties.homeContext, null, false, entry.getSesameEntryURI()).asList();
+			try (RepositoryConnection rc = this.entry.repository.getConnection()) {
+				List<Statement> matches = rc.getStatements(resourceURI, RepositoryProperties.homeContext, null, false, entry.getSesameEntryURI()).stream().toList();
 				if (!matches.isEmpty()) {
-					this.homeContext = URI.create(matches.get(0).getObject().stringValue());
+					this.homeContext = URI.create(matches.getFirst().getObject().stringValue());
 				}
 			} catch (org.eclipse.rdf4j.repository.RepositoryException e) {
 				log.error(e.getMessage(), e);
 				throw new RepositoryException("Failed to connect to repository", e);
-			} finally {
-				try {
-					rc.close();
-				} catch (org.eclipse.rdf4j.repository.RepositoryException e) {
-					log.error(e.getMessage(), e);
-				}
 			}
 		}
 
@@ -110,57 +108,58 @@ public class GroupImpl extends ListImpl implements Group {
 
 	public boolean setHomeContext(Context context) {
 		this.entry.getRepositoryManager().getPrincipalManager().checkAuthenticatedUserAuthorized(entry, PrincipalManager.AccessProperty.WriteResource);
-        synchronized (this.entry.repository) {
-            RepositoryConnection rc = null;
-            try {
-                rc = this.entry.repository.getConnection();
-                rc.begin();
-                ValueFactory vf = this.entry.repository.getValueFactory();
+		synchronized (this.entry.repository) {
+			RepositoryConnection rc = null;
+			try {
+				rc = this.entry.repository.getConnection();
+				rc.begin();
+				ValueFactory vf = this.entry.repository.getValueFactory();
 
-                //Remove homecontext and remove inverse relation cache.
-                RepositoryResult<Statement> iter = rc.getStatements(resourceURI, RepositoryProperties.homeContext, null, false, entry.getSesameEntryURI());
-                while(iter.hasNext()) {
-                    Statement statement = iter.next();
-                    URI sourceEntryURI = URI.create(statement.getObject().stringValue());
-                    EntryImpl sourceEntry =  (EntryImpl)this.entry.getRepositoryManager().getContextManager().getEntry(sourceEntryURI);
-                    if (sourceEntry != null) {
-                        sourceEntry.removeRelationSynchronized(statement, rc, vf);
-                    }
-                    rc.remove(statement, entry.getSesameEntryURI());
-                }
-                iter.close();
+				//Remove homecontext and remove inverse relation cache.
+				RepositoryResult<Statement> iter = rc.getStatements(resourceURI, RepositoryProperties.homeContext, null, false, entry.getSesameEntryURI());
+				while (iter.hasNext()) {
+					Statement statement = iter.next();
+					URI sourceEntryURI = URI.create(statement.getObject().stringValue());
+					EntryImpl sourceEntry = (EntryImpl) this.entry.getRepositoryManager().getContextManager().getEntry(sourceEntryURI);
+					if (sourceEntry != null) {
+						sourceEntry.removeRelationSynchronized(statement, rc);
+					}
+					rc.remove(statement, entry.getSesameEntryURI());
+				}
+				iter.close();
 
-                //Add new homecontext and add inverse relational cache
-                if (context != null) {
-                    Statement newStatement = vf.createStatement(resourceURI, RepositoryProperties.homeContext, ((EntryImpl) context.getEntry()).getSesameEntryURI(), entry.getSesameEntryURI());
-                    rc.add(newStatement);
-                    ((EntryImpl) context.getEntry()).addRelationSynchronized(newStatement, rc, this.entry.repository.getValueFactory());
-                }
-                rc.commit();
+				//Add new homecontext and add inverse relational cache
+				if (context != null) {
+					Statement newStatement = vf.createStatement(resourceURI, RepositoryProperties.homeContext, ((EntryImpl) context.getEntry()).getSesameEntryURI(), entry.getSesameEntryURI());
+					rc.add(newStatement);
+					((EntryImpl) context.getEntry()).addRelationSynchronized(newStatement, rc);
+				}
+				rc.commit();
 				entry.getRepositoryManager().fireRepositoryEvent(new RepositoryEventObject(entry, RepositoryEvent.ResourceUpdated));
-            } catch (org.eclipse.rdf4j.repository.RepositoryException e) {
-                log.error(e.getMessage(), e);
-                try {
-                    rc.rollback();
-                } catch (org.eclipse.rdf4j.repository.RepositoryException e1) {
-                    log.error(e.getMessage(), e1);
-                }
-            } finally {
-                try {
-                    rc.close();
+			} catch (org.eclipse.rdf4j.repository.RepositoryException e) {
+				log.error(e.getMessage(), e);
+				try {
+					rc.rollback();
+				} catch (org.eclipse.rdf4j.repository.RepositoryException e1) {
+					log.error(e.getMessage(), e1);
+				}
+			} finally {
+				try {
+					rc.close();
 					//We poke in the internals of entryImpl, to notify that it has relations for later setGraph calls to work
 					entry.invRelations = true;
-                } catch (org.eclipse.rdf4j.repository.RepositoryException e) {
-                    log.error(e.getMessage());
-                }
-                this.homeContext = context.getEntry().getEntryURI();
-            }
-        }
-        return true;
+				} catch (org.eclipse.rdf4j.repository.RepositoryException e) {
+					log.error(e.getMessage());
+				}
+				this.homeContext = context.getEntry().getEntryURI();
+			}
+		}
+		return true;
 	}
 
 	/**
-	 * Adds a user to the group through adding its URI to the groups list of URIs.
+	 * Adds a user to the group through adding its URI to the group's list of URIs.
+	 *
 	 * @param user The user to add to the group
 	 */
 	public void addMember(User user) {
@@ -169,6 +168,7 @@ public class GroupImpl extends ListImpl implements Group {
 
 	/**
 	 * Removes a user from the group.
+	 *
 	 * @param user The user to remove
 	 * @return true if the removing was successful, false otherwise
 	 */
@@ -177,24 +177,26 @@ public class GroupImpl extends ListImpl implements Group {
 	}
 
 	/**
-	 * Tells whether a user is member of the group.
-	 * @param user the user to test if has group member
+	 * Tells whether a user is a member of the group.
+	 *
+	 * @param user the user to test if is group member
 	 * @return true if the user is a member, false otherwise
 	 */
 	public boolean isMember(User user) {
 		if (user == null) {
 			return false;
 		}
-		
+
 		List<URI> children = getChildren();
 		Entry userEntry = user.getEntry();
 		URI userEntryURI = userEntry.getEntryURI();
-		
+
 		return children.contains(userEntryURI);
 	}
 
 	/**
 	 * Returns a list of all members URIs (entryURIs)
+	 *
 	 * @return a list of all members URIs
 	 */
 	public List<URI> memberUris() {
@@ -203,31 +205,30 @@ public class GroupImpl extends ListImpl implements Group {
 
 	/**
 	 * Returns a list of all members
+	 *
 	 * @return a list of all members
 	 */
 	public List<User> members() {
-		List<User> userList = new Vector<User>();
+		List<User> userList = new Vector<>();
 		Iterator<URI> memberUriIterator = memberUris().iterator();
 		boolean contentError = false;
 
-		while(memberUriIterator.hasNext()) {
+		while (memberUriIterator.hasNext()) {
 			URI entryURI = memberUriIterator.next();
 			try {
 				Entry userEntry = entry.getContext().getByEntryURI(entryURI);
-				if(userEntry.getGraphType() == GraphType.User) {
+				if (userEntry.getGraphType() == GraphType.User) {
 					userList.add((User) userEntry.getResource());
-				}
-				else {
+				} else {
 					contentError = true;
 				}
-			}
-			catch (NullPointerException e) {
+			} catch (NullPointerException e) {
 				log.error(e.getMessage());
 			}
 		}
-		
+
 		if (contentError) {
-			log.error("Error in group " + getURI().toString() + " . All members does not seem to be of the type User.");
+			log.error("Error in group {} . All members does not seem to be of the type User.", getURI().toString());
 		}
 
 		return userList;
@@ -235,8 +236,7 @@ public class GroupImpl extends ListImpl implements Group {
 
 	public Vector<URI> setChildren(Vector<URI> children) {
 		setChildren(children, true, true);
-		return new Vector<URI>(getChildren()); 
-
+		return new Vector<>(getChildren());
 	}
 
 }
